ecmascript/parser/tests/test262-error-references/fail/095bea002b10b8e1.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/095bea002b10b8e1.js:1:8
  |
1 | foo[/42
  |        ^

